--- a/app/src/main/res/layout/activity_guest_home.xml
+++ b/app/src/main/res/layout/activity_guest_home.xml
@@ -3,15 +3,49 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".roles.guest.GuestHome">
+    android:layout_height="match_parent">
+<!--    tools:context=".GuestHome" >-->
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Zalogowano"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#818BC34A"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/listview"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="181dp" />
+        tools:ignore="MissingConstraints" />
+
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/button_layout"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintVertical_bias="1" />
+
+    <LinearLayout
+        android:id="@+id/button_layout"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:background="#0FFFFFFF"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listview">
+
+
+        <Button
+            android:id="@+id/bCheck"
+            style="@android:style/Widget.Material.Light.Button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:height="20dp"
+            android:fontFamily="casual"
+            android:text="Check"
+            android:textColor="#FFEB3B"
+            android:textSize="36sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
