--- a/app/src/main/res/layout/activity_guest_home.xml
+++ b/app/src/main/res/layout/activity_guest_home.xml
@@ -35,7 +35,7 @@
 
 
         <Button
-            android:id="@+id/bCheck"
+            android:id="@+id/bAddPostg"
             style="@android:style/Widget.Material.Light.Button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -48,4 +48,14 @@
             android:textStyle="bold" />
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:srcCompat="@tools:sample/avatars" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
