--- a/app/src/main/res/menu/setting_menu.xml
+++ b/app/src/main/res/menu/setting_menu.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:title="Item"
+        app:showAsAction="always" />
     <item android:id="@+id/item1"
         android:icon="@drawable/ic_mysettings"
         android:title="Item1"
@@ -12,6 +15,7 @@
         app:showAsAction="never"/>
 
 
+    <item android:title="Item" />
     <item android:id="@+id/item3"
         android:icon="@drawable/ic_mysettings"
         android:title="Item1"
