--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -50,5 +50,15 @@
             android:text="date"
             android:textColor="#000333" />
 
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="221dp"
+            android:layout_height="52dp"
+            android:layout_alignStart="@id/imageView"
+            android:layout_alignLeft="@id/imageView"
+            android:layout_alignTop="@id/posttitle"
+            android:layout_marginLeft="160dp"
+            android:layout_marginTop="40dp" />
+
     </RelativeLayout>
 </LinearLayout>
