--- a/app/src/main/res/layout/mini_post.xml
+++ b/app/src/main/res/layout/mini_post.xml
@@ -5,8 +5,8 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp"
+    android:layout_marginTop="20dp"
+    android:layout_marginBottom="20dp"
     android:orientation="vertical">
 
 
@@ -14,6 +14,7 @@
         android:id="@+id/header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#ECFDFD"
         android:orientation="horizontal">
 
         <ImageView
@@ -54,6 +55,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             app:srcCompat="@android:drawable/ic_delete" />
+
+        <TextView
+            android:id="@+id/postid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            tools:visibility="gone" />
     </LinearLayout>
 
     <LinearLayout
@@ -134,6 +142,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
+        android:layout_marginBottom="15dp"
         android:background="#CFEBF8"
         android:orientation="vertical">
 
