--- a/app/src/main/res/menu/setting_menu.xml
+++ b/app/src/main/res/menu/setting_menu.xml
@@ -1,36 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:title="Item"
+        android:id="@+id/bHome"
+        android:icon="@android:drawable/btn_star_big_on"
+        android:title="Itemme"
         app:showAsAction="always" />
-    <item android:id="@+id/item1"
-        android:icon="@drawable/ic_mysettings"
-        android:title="Item1"
-        app:showAsAction="ifRoom"/>
 
-    <item android:id="@+id/item2"
-        android:icon="@drawable/ic_mysettings"
-        android:title="Item1"
-        app:showAsAction="never"/>
-
-
-    <item android:title="Item" />
-    <item android:id="@+id/item3"
-        android:icon="@drawable/ic_mysettings"
-        android:title="Item1"
-        app:showAsAction="ifRoom">
-
+    <item
+        android:id="@+id/bMenu"
+        android:icon="@android:drawable/ic_dialog_dialer"
+        android:title="Menu"
+        app:showAsAction="always" >
         <menu>
-            <item android:id="@+id/subitem1"
-                android:icon="@drawable/ic_mysettings"
-                android:title="subitem1"/>
+            <item
+                android:id="@+id/bInfo"
+                android:title="Info"/>
 
-            <item android:id="@+id/subitem2"
-                android:icon="@drawable/ic_mysettings"
-                android:title="subitem1"/>
+            <item
+                android:id="@+id/bGifts"
+                android:title="Prezenty"/>
+
+            <item
+                android:id="@+id/bTable"
+                android:title="Stoły"/>
 
         </menu>
     </item>
 
+    <item
+        android:id="@+id/bSettings"
+        android:icon="@drawable/ic_mysettings"
+        android:title="Menu"
+        app:showAsAction="always">
+
+        <menu>
+            <item
+                android:id="@+id/bLogout"
+                android:title="Logout"/>
+
+            <item
+                android:id="@+id/bOptions"
+                android:title="Settings"/>
+
+        </menu>
+    </item>
 </menu>
