--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="mainColor">#B85151</color>
+    <color name="mainColor">#935F81</color>
     <color name="mainColorStrong">#632121</color>
 
 
