--- a/app/src/main/res/layout/mini_post.xml
+++ b/app/src/main/res/layout/mini_post.xml
@@ -7,6 +7,8 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
     android:layout_marginBottom="20dp"
+    android:background="#FFFFFF"
+    android:foregroundTint="#3F51B5"
     android:orientation="vertical">
 
 
@@ -14,7 +16,7 @@
         android:id="@+id/header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ECFDFD"
+        android:background="#D1C0CB"
         android:orientation="horizontal">
 
         <ImageView
@@ -26,35 +28,39 @@
             android:baselineAlignBottom="false"
             android:rotationX="0"
             android:textAlignment="gravity"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@android:drawable/ic_menu_camera" />
 
         <TextView
             android:id="@+id/userName"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="62dp"
             android:layout_weight="1"
             android:padding="5dp"
             android:paddingStart="10dp"
             android:text="Jak Nowak"
-            android:textColor="#A55555"
-            android:textSize="20sp"
+            android:textColor="#fff"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/postdate"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="0dp"
             android:layout_weight="1"
             android:gravity="right"
             android:paddingEnd="10dp"
-            android:text="20-04-2021" />
+            android:text="20-04-2021"
+            android:textColor="#fff" />
 
         <ImageButton
             android:id="@+id/removePost"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="46dp"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_delete" />
+            android:background="#D1C0CB"
+            android:visibility="gone"
+            app:srcCompat="@android:drawable/ic_menu_delete" />
 
         <TextView
             android:id="@+id/postid"
@@ -74,7 +80,7 @@
             android:id="@+id/photo1"
             android:layout_width="match_parent"
             android:layout_height="280dp"
-            android:layout_margin="5dp"
+            android:layout_margin="8dp"
             android:layout_weight="0"
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
@@ -83,7 +89,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:text="More Photo" />
+            android:includeFontPadding="true"
+            android:text="WIĘCEJ"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
             android:id="@+id/textContent"
@@ -91,7 +99,8 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="Ala ma kota, a kot ma ale. bla bla bla  elo elo fdfd fd df df df df dsetrg gth" />
+            android:text="Smieszie wygladacie na tym zdjęciu, nie mogłem się oprzeć aby go nie dodać :D <3 Super zabawa!" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -101,11 +110,11 @@
 
         <ImageButton
             android:id="@+id/addStar"
-            android:layout_width="40dp"
+            android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="#C14848"
-            app:srcCompat="@android:drawable/btn_star_big_off"
+            android:background="#D1C0CB"
+            app:srcCompat="@android:drawable/btn_star"
             tools:visibility="visible" />
 
         <TextView
@@ -113,8 +122,10 @@
             android:layout_width="107dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#D1C0CB"
             android:gravity="center_vertical"
             android:text="4"
+            android:textColor="#fff"
             android:textSize="24sp" />
 
         <ImageView
@@ -122,6 +133,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#D1C0CB"
             app:srcCompat="@android:drawable/sym_action_chat" />
 
         <TextView
@@ -129,9 +141,11 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#D1C0CB"
             android:gravity="center_vertical"
             android:text="21"
             android:textAlignment="center"
+            android:textColor="#fff"
             android:textSize="24sp" />
 
 
@@ -150,7 +164,10 @@
             android:id="@+id/firstComment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#E0DDE6"
             android:orientation="horizontal">
+
+
 
             <ImageView
                 android:id="@+id/cProfilPhoto"
@@ -158,7 +175,7 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="5dp"
                 android:layout_weight="0"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@android:drawable/ic_menu_camera" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -179,13 +196,13 @@
                         android:layout_marginStart="5dp"
                         android:layout_weight="1"
                         android:text="Alina Kowalska"
-                        android:textColor="#FF5722"
+                        android:textColor="#5C514E"
                         android:textStyle="bold|italic" />
 
                     <TextView
                         android:id="@+id/comentData"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="126dp"
+                        android:layout_height="19dp"
                         android:layout_marginEnd="5dp"
                         android:layout_weight="1"
                         android:text="20-04-2021"
@@ -201,29 +218,44 @@
                     android:text="tak tak, ok" />
             </LinearLayout>
 
+            <ImageButton
+                android:id="@+id/removePost2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:background="#E0DDE6"
+                android:visibility="visible"
+                app:srcCompat="@android:drawable/ic_menu_delete" />
+
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/add_comment_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#C1A7B8"
             android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/newComment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
                 android:layout_weight="1"
+                android:background="#FFFFFF"
                 android:ems="10"
                 android:hint="comment"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textSize="24sp" />
 
             <ImageButton
                 android:id="@+id/addComment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/ic_input_add" />
+                android:backgroundTint="#935F81"
+                app:srcCompat="@android:drawable/ic_menu_edit" />
         </LinearLayout>
     </LinearLayout>
 
