--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -1,48 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".utils.CreatePost">
 
-    <LinearLayout
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:orientation="vertical"-->
+    <!--        tools:layout_editor_absoluteX="174dp"-->
+    <!--        tools:layout_editor_absoluteY="309dp">-->
+
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="174dp"
-        tools:layout_editor_absoluteY="309dp">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="#B34141"
+        android:gravity="center"
+        android:includeFontPadding="true"
+        android:text="Dodaj nowy post"
+        android:textColor="#F3F3F3"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <ImageButton
+            android:id="@+id/deletePhoto"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Dodaj Post" />
-
-        <ImageView
-            android:id="@+id/photo"
-            android:layout_width="match_parent"
-            android:layout_height="112dp"
-            tools:srcCompat="@tools:sample/avatars" />
-
-        <Button
-            android:id="@+id/bTakePhoto"
-            android:layout_width="match_parent"
-            android:layout_height="59dp"
-            android:text="Zrob zdjęcie" />
-
-        <EditText
-            android:id="@+id/postDescription"
-            android:layout_width="match_parent"
-            android:layout_height="91dp"
-            android:ems="10"
-            android:gravity="start|top"
-            android:inputType="textMultiLine" />
-
-        <Button
-            android:id="@+id/bAddPost"
-            android:layout_width="match_parent"
-            android:layout_height="108dp"
-            android:text="Button" />
+            android:layout_weight="1"
+            app:srcCompat="@android:drawable/ic_menu_delete" />
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TableLayout
+        android:id="@+id/gallery"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tool_bar"
+        android:foregroundGravity="top"
+        android:gravity="center">
+        <!--        android:gravity="fill_vertical">-->
+
+
+        <TableRow android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+            <ImageView
+                android:id="@+id/photo1"
+                android:layout_width="120dp"
+                android:layout_height="150dp"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <ImageView
+                android:id="@+id/photo2"
+                android:layout_width="120dp"
+                android:layout_height="150dp"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <ImageView
+                android:id="@+id/photo3"
+                android:layout_width="120dp"
+                android:layout_height="150dp"
+                tools:srcCompat="@tools:sample/avatars" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/photo_galery"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/photo4"
+                android:layout_width="120dp"
+                android:layout_height="150dp"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <ImageView
+                android:id="@+id/photo5"
+                android:layout_width="120dp"
+                android:layout_height="150dp"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <ImageView
+                android:id="@+id/photo6"
+                android:layout_width="120dp"
+                android:layout_height="150dp"
+                tools:srcCompat="@tools:sample/avatars" />
+        </TableRow>
+    </TableLayout>
+
+    <LinearLayout
+        android:id="@+id/button_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/gallery"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/bTakePhoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@android:drawable/ic_menu_camera" />
+
+        <ImageButton
+            android:id="@+id/bGalleryPhoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@android:drawable/ic_menu_gallery" />
+    </LinearLayout>
+
+    <EditText
+        android:id="@+id/postDescription"
+        android:layout_width="match_parent"
+        android:layout_height="277dp"
+        android:layout_above="@id/bAddPost"
+        android:layout_below="@id/button_bar"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="7dp"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="treść ..."
+        android:inputType="textMultiLine" />
+
+    <Button
+        android:id="@+id/bAddPost"
+        android:layout_width="match_parent"
+        android:layout_height="108dp"
+        android:layout_alignParentBottom="true"
+        android:text="Button" />
+
+</RelativeLayout>
