--- a/app/src/main/res/layout/activity_guest_info.xml
+++ b/app/src/main/res/layout/activity_guest_info.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fillViewport="true">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -17,9 +17,11 @@
                 android:id="@+id/textheader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Zapraszamy na nasz ślub"
+                android:background="#C1A7B8"
+                android:text="Pobieramy się!"
                 android:textAlignment="center"
-                android:textSize="24sp"
+                android:textSize="28sp"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -28,8 +30,8 @@
             <ImageView
                 android:id="@+id/hostsPhoto"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:layout_height="299dp"
+                tools:srcCompat="@drawable/img_20170603_123614" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,13 +42,23 @@
                     android:id="@+id/brideName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:background="#935F81"
+                    android:textColor="@color/white"
+                    android:textAlignment="center"
+                    android:textSize="20dp"
+                    tools:text="Patrycja" />
 
                 <TextView
                     android:id="@+id/groomName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:background="#935F81"
+                    android:textColor="@color/white"
+                    android:textSize="20dp"
+                    android:textAlignment="center"
+                    tools:text="Piotr" />
             </LinearLayout>
 
             <LinearLayout
@@ -59,13 +71,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="6635845" />
+                    android:background="#E0DDE6"
+                    android:textAlignment="center"
+                    android:textSize="20dp"
+                    android:text="733170569" />
 
                 <TextView
                     android:id="@+id/groomPhone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:background="#E0DDE6"
+                    android:textAlignment="center"
+                    android:textSize="20dp"
+                    tools:text="663735444" />
             </LinearLayout>
 
             <TextView
@@ -80,16 +99,26 @@
 
                 <TextView
                     android:id="@+id/weddingTimeLabel"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:background="#935F81"
+                    android:textColor="@color/white"
+                    android:textSize="20dp"
+                    android:textAlignment="center"
                     android:text="Godzina:" />
 
                 <TextView
-                    android:id="@+id/weddingTime"
+                    android:id="@+id/weddingAddressLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:background="#935F81"
+                    android:textColor="@color/white"
+                    android:textSize="20dp"
+                    android:textAlignment="center"
+                    android:text="Adres" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -97,25 +126,34 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
+
+
                 <TextView
-                    android:id="@+id/weddingAddressLabel"
+                    android:id="@+id/weddingTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Adres" />
+                    android:background="#E0DDE6"
+                    android:textAlignment="center"
+                    android:textSize="20dp"
+                    tools:text="17:00" />
 
                 <TextView
                     android:id="@+id/weddingAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:background="#E0DDE6"
+                    android:textAlignment="center"
+                    android:textSize="20dp"
+                    tools:text="Stronie Slaskie" />
             </LinearLayout>
 
             <ImageView
                 android:id="@+id/churchPhoto"
                 android:layout_width="match_parent"
                 android:layout_height="196dp"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@drawable/str" />
 
 <!--            <com.google.android.gms.maps.MapView-->
 <!--                android:id="@+id/mapView"-->
@@ -123,21 +161,29 @@
 <!--                android:layout_height="wrap_content" />-->
 
             <FrameLayout
+                android:id="@+id/frame_layout"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:id="@+id/frame_layout"/>
+                android:layout_height="22dp" />
 
             <TextView
                 android:id="@+id/textView18"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="33dp"
+                android:background="#C1A7B8"
                 android:text="Po uroczystosći zapraszamy gośći do:"
+                android:textColor="@color/white"
+                android:textSize="25dp"
                 android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/weddingHouseName"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="48dp"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="30dp"
+
+                tools:text="HOTELU GÓRSKI PORANEK" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -149,20 +195,29 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:background="#935F81"
+                    android:textSize="20dp"
                     android:text="Adres:" />
 
                 <TextView
                     android:id="@+id/partyAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:background="#935F81"
+                    android:textSize="20dp"
+                    tools:text="Stronie Slaskie" />
             </LinearLayout>
 
             <ImageView
                 android:id="@+id/partyHousePhoto"
                 android:layout_width="match_parent"
                 android:layout_height="158dp"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@drawable/por" />
 
             <FrameLayout
                 android:layout_width="match_parent"
