--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,8 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="280dp"
-        android:width="150"
-        android:height="60"
+        android:width="150dp"
+        android:height="60dp"
         android:onClick="signIn"
         android:text="Zaloguj"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -60,8 +60,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
-        android:width="250"
-        android:height="15"
+        android:width="250dp"
+        android:height="15dp"
         android:backgroundTint="#B88AA5"
         android:onClick="signIn"
         android:text="Zarejestruj"
@@ -75,8 +75,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
-        android:width="250"
-        android:height="15"
+        android:width="250dp"
+        android:height="15dp"
         android:backgroundTint="#B88AA5"
         android:onClick="signIn"
         android:text="Zresetuj hasło"
