--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -1,62 +1,165 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
     android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:context=".roles.guest.GuestInfo">
+        android:padding="10dip" >
 
-        <TextView
-            android:id="@+id/textheader"
+        <LinearLayout
+            android:id="@+id/header_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#D1C0CB"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/profilphoto"
+                android:layout_width="62dp"
+                android:layout_height="63dp"
+                android:layout_margin="5dp"
+                android:layout_weight="0"
+                android:baselineAlignBottom="false"
+                android:rotationX="0"
+                android:textAlignment="gravity"
+                tools:srcCompat="@android:drawable/ic_menu_camera" />
+
+            <TextView
+                android:id="@+id/userName"
+                android:layout_width="wrap_content"
+                android:layout_height="62dp"
+                android:layout_weight="1"
+                android:padding="5dp"
+                android:paddingStart="10dp"
+                android:text="Jak Nowak"
+                android:textColor="#fff"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/postdate"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="0dp"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:paddingEnd="10dp"
+                android:text="20-04-2021"
+                android:textColor="#fff" />
+
+            <ImageButton
+                android:id="@+id/removePost3"
+                android:layout_width="wrap_content"
+                android:layout_height="46dp"
+                android:layout_weight="1"
+                android:background="#D1C0CB"
+                android:visibility="gone"
+                app:srcCompat="@android:drawable/ic_menu_delete" />
+
+            <TextView
+                android:id="@+id/postid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                tools:visibility="gone" />
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/photoListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dip"
+            android:background="#FFFFFF"></ListView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/addStar"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="#D1C0CB"
+                app:srcCompat="@android:drawable/btn_star"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/starNum"
+                android:layout_width="107dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#D1C0CB"
+                android:gravity="center_vertical"
+                android:text="4"
+                android:textColor="#fff"
+                android:textSize="24sp" />
+
+            <ImageView
+                android:id="@+id/commentImg"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#D1C0CB"
+                app:srcCompat="@android:drawable/sym_action_chat" />
+
+            <TextView
+                android:id="@+id/commentNum"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#D1C0CB"
+                android:gravity="center_vertical"
+                android:text="21"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="24sp" />
+
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/commentListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
+            android:background="#FFFFFF"></ListView>
+
+        <LinearLayout
+            android:id="@+id/add_comment_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#C1A7B8"
-            android:text="WeddiApp"
-            android:textAlignment="center"
-            android:textSize="28sp"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/hostsPhoto"
-            android:layout_width="match_parent"
-            android:layout_height="299dp"
-            tools:srcCompat="@drawable/img_20170603_123614" />
+            <EditText
+                android:id="@+id/newComment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:background="#FFFFFF"
+                android:ems="10"
+                android:hint="comment"
+                android:inputType="textPersonName"
+                android:textSize="24sp" />
 
-        <ImageView
-            android:id="@+id/churchPhoto"
-            android:layout_width="match_parent"
-            android:layout_height="196dp"
-            android:paddingBottom="20"
-            tools:srcCompat="@drawable/str" />
-
-        <ImageView
-            android:id="@+id/partyHousePhoto"
-            android:layout_width="match_parent"
-            android:layout_height="158dp"
-            android:paddingBottom="20"
-            tools:srcCompat="@drawable/por" />
-
-        <TextView
-            android:id="@+id/textView18"
-            android:layout_width="match_parent"
-            android:layout_height="67dp"
-            android:background="#C1A7B8"
-            android:text="Zdjęcia które zrobiłam wam w kościele"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="25dp" />
-
-
+            <ImageButton
+                android:id="@+id/addComment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="#935F81"
+                android:onClick="addComment"
+                app:srcCompat="@android:drawable/ic_menu_edit" />
+        </LinearLayout>
     </LinearLayout>
+
 </ScrollView>
