--- a/app/src/main/res/layout/custom_action_bar.xml
+++ b/app/src/main/res/layout/custom_action_bar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#B85151"
+    android:background="@color/mainColor"
     android:orientation="horizontal"
     tools:menu="@menu/setting_menu">
 
