--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,7 @@
     <color name="mainColor">#935F81</color>
     <color name="mainColorStrong">#632121</color>
 
+    <color name="backgroundColor">#f6e6fc</color>
+
 
 </resources>
