--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".utils.CreatePost">
+    tools:context=".module.createpost.CreatePost">
 
     <!--    <LinearLayout-->
     <!--        android:layout_width="match_parent"-->
