--- a/app/src/main/res/layout/custom_action_bar.xml
+++ b/app/src/main/res/layout/custom_action_bar.xml
@@ -12,7 +12,7 @@
         android:id="@+id/myprofilphoto"
         android:layout_width="73dp"
         android:layout_height="60dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@drawable/user" />
 
     <TextView
         android:id="@+id/apptitle"
