--- a/app/src/main/res/layout/mini_post.xml
+++ b/app/src/main/res/layout/mini_post.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_layout"
+    android:id="@+id/table_main_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
-    android:layout_marginBottom="20dp"
+    android:layout_marginBottom="40dp"
     android:background="#FFFFFF"
     android:foregroundTint="#3F51B5"
     android:orientation="vertical">
@@ -162,12 +162,79 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/firstComment"
+            android:id="@+id/SecondLastComment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#E0DDE6"
+            android:orientation="horizontal">
+
+
+            <ImageView
+                android:id="@+id/c2ProfilPhoto"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="5dp"
+                android:layout_weight="0"
+                tools:srcCompat="@android:drawable/ic_menu_camera" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/user2Com"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:layout_weight="1"
+                        android:text="Alina Kowalska"
+                        android:textColor="#5C514E"
+                        android:textStyle="bold|italic" />
+
+                    <TextView
+                        android:id="@+id/comment2Date"
+                        android:layout_width="126dp"
+                        android:layout_height="19dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_weight="1"
+                        android:text="20-04-2021"
+                        android:textAlignment="textEnd"
+                        android:textSize="12sp" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/comment2Content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:text="tak tak, ok" />
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/removeComment2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:background="#E0DDE6"
+                android:visibility="gone"
+                app:srcCompat="@android:drawable/ic_menu_delete" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/LastComment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#E0DDE6"
             android:orientation="horizontal">
-
 
 
             <ImageView
@@ -220,7 +287,7 @@
             </LinearLayout>
 
             <ImageButton
-                android:id="@+id/removePost2"
+                android:id="@+id/removeComment"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="0"
