--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.MyWeddi" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+<!--    <style name="Theme.MyWeddi" parent="Theme.AppCompat.DayNight.DarkActionBar">-->
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/mainColor</item>
         <item name="colorPrimaryVariant">@color/mainColorStrong</item>
